--- a/changelog.txt
+++ b/changelog.txt
@@ -38,3 +38,7 @@ Initial production release.
 
 0.2.1 -- October 6 2003
 * Updated changelog.txt and the version number in lafcadio/lafcadio.rb.
+
+0.3.0 -- October 15 2003
+* moved install.rb from /bin to /. /bin is now for scripts that Lafcadio users will use after installation, such as lafcadio_schema.
+* created lafcadio_schema script, which reads a DomainObject class definition and creates a create table statement.
