*** empty log message ***

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Lafcadio is an object-relational mapping layer for Ruby and MySQL.https://sourceforge.net/projects/lafcadio/INSTALLATIONRun "./bin/install.rb --help" for information.
+Lafcadio is an object-relational mapping layer for Ruby and MySQL.http://rubyforge.org/projects/lafcadio/INSTALLATION1. You will need to install Ruby/MySQL, which can be found athttp://www.tmtm.org/ja/ruby/mysql/README_en.html. (Please note thatRuby/MySQL and MySQL/Ruby are not the same thing.)2. As root, run "./install.rb", which will copy the Ruby files into the rightsubdirectory. You can run "./install.rb --help" for information.
