--- a/changelog.txt
+++ b/changelog.txt
@@ -1,29 +1,34 @@
 CHANGELOG
 
-0.1.0 -- July 1 2003
-Initial alpha release.
+0.3.3 -- November 23 2003
+* ClassDefinitionXmlParser#execute raises an informative error message if you forget to define a field's class.
+* FieldManager captures the query string.
+* MockDbBridge observes a limit set in a Query.
+* TimeStampField works with ClassDefinitionXmlParser.
+* Lafcadio now uses DBI instead of Ruby/MySQL -- this is the first step towards making Lafcadio compatible with other databases.
+* lafcadio_schema correctly creates the field definition for a TimeStampField.
 
-0.1.1 -- July 27 2003
-* Extracted DomainUtil from ClassUtil.
-* Extended sprintf-style support in DateFormatter.
-* You can set a BooleanField's enums directly with BooleanField#enums
-* Collector#getMapObject raises ArgumentError if either of its keys are nil
-* ObjectStore flushes cache after new object commit
-* Added HashOfArrays#[], HashOfArrays#[]=
-* Added StrUtil.lineWrap
+0.3.2 -- October 27 2003
+* Fixed a bug in the includer (the class that allows for root-level includeable files to reduce requires) that made it only work if it was searching in the current directory.
 
-0.1.2 -- August 6 2003
-* Cleaned up code to work with Ruby 1.8.0. 
-* The code's been optimized in a number of places.
-* MockEmailer calls Email#verifySendable before pretending to send an email. 
-* DateTimeField#valueFromSQL throws an informative error if it gets an unparseable string.
-* Condition#toSql can deal with fields of superclasses
+0.3.1 -- October 26 2003
+* DEPRECATION WARNING: There are now root-level includeable files that can save you from having to type too many includes. You can now include "lafcadio/objectField" to include all files in the objectField directory instead of "lafcadio/objectField/DateField", "lafcadio/objectField/TextField", etc. The individual files will disappear sometime around version 0.5.0.
+* Instead of overwriting DomainObject.getClassFields to define fields for a domain class, you now have the option of writing an XML file instead. This method is now the encouraged method, but the old method of overwriting DomainObject.getClassFields will work for the foreseeable future.
+* lafcadio_schema needs the config file as an argument flagged with -c.
+* Added +, -, prev, next, startDate, and endDate to Month. Also, calling Month.new with no arguments returns the current month.
+* SQL logging can be toggled by editing the config file. Insert the line "logSql:y" in the file to turn it on, and make sure to set your logdir value as well.
+* Added QueueHash#==.
+* Fixed a bug in MockSmtp.lastSubject.
 
-0.1.3 -- August 11 2003
-Initial beta release.
-* Wrote lots of RDoc comments.
-* Added DomainObject#commit.
-* Renamed Config to LafcadioConfig.
+0.3.0 -- October 15 2003
+* moved install.rb from /bin to /. /bin is now for scripts that Lafcadio users will use after installation, such as lafcadio_schema.
+* created lafcadio_schema script, which reads a DomainObject class definition and creates a create table statement.
+
+0.2.2 -- November 23 2003
+* DbBridge disconnects from MySql when it's destroyed.
+
+0.2.1 -- October 6 2003
+* Updated changelog.txt and the version number in lafcadio/lafcadio.rb.
 
 0.2.0 -- September 25 2003
 Initial production release.
@@ -36,21 +41,38 @@ Initial production release.
 * Values in DomainObjects can be set through a DomainObjectProxy.
 * Fixed a bug where Query::Equals#toSql failed with a boolean field and a false value.
 
-0.2.1 -- October 6 2003
-* Updated changelog.txt and the version number in lafcadio/lafcadio.rb.
+0.1.3 -- August 11 2003
+Initial beta release.
+* Wrote lots of RDoc comments.
+* Added DomainObject#commit.
+* Renamed Config to LafcadioConfig.
 
-0.3.0 -- October 15 2003
-* moved install.rb from /bin to /. /bin is now for scripts that Lafcadio users will use after installation, such as lafcadio_schema.
-* created lafcadio_schema script, which reads a DomainObject class definition and creates a create table statement.
+0.1.2 -- August 6 2003
+* Cleaned up code to work with Ruby 1.8.0. 
+* The code's been optimized in a number of places.
+* MockEmailer calls Email#verifySendable before pretending to send an email. 
+* DateTimeField#valueFromSQL throws an informative error if it gets an unparseable string.
+* Condition#toSql can deal with fields of superclasses
 
-0.3.1 -- October 26 2003
-* DEPRECATION WARNING: There are now root-level includeable files that can save you from having to type too many includes. You can now include "lafcadio/objectField" to include all files in the objectField directory instead of "lafcadio/objectField/DateField", "lafcadio/objectField/TextField", etc. The individual files will disappear sometime around version 0.5.0.
-* Instead of overwriting DomainObject.getClassFields to define fields for a domain class, you now have the option of writing an XML file instead. This method is now the encouraged method, but the old method of overwriting DomainObject.getClassFields will work for the foreseeable future.
-* lafcadio_schema needs the config file as an argument flagged with -c.
-* Added +, -, prev, next, startDate, and endDate to Month. Also, calling Month.new with no arguments returns the current month.
-* SQL logging can be toggled by editing the config file. Insert the line "logSql:y" in the file to turn it on, and make sure to set your logdir value as well.
-* Added QueueHash#==.
-* Fixed a bug in MockSmtp.lastSubject.
+0.1.1 -- July 27 2003
+* Extracted DomainUtil from ClassUtil.
+* Extended sprintf-style support in DateFormatter.
+* You can set a BooleanField's enums directly with BooleanField#enums
+* Collector#getMapObject raises ArgumentError if either of its keys are nil
+* ObjectStore flushes cache after new object commit
+* Added HashOfArrays#[], HashOfArrays#[]=
+* Added StrUtil.lineWrap
 
-0.3.2 -- October 27 2003
-* Fixed a bug in the includer (the class that allows for root-level includeable files to reduce requires) that made it only work if it was searching in the current directory.
+0.1.0 -- July 1 2003
+Initial alpha release.
+
+
+
+
+
+
+
+
+
+
+
