--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,15 @@
 CHANGELOG
 
+0.4.0 -- June 26 2004
+* WARNING: Domain object primary key is now named "pkId", not "objId"
+* Added ObjectStore#getMax( domain_class, field_name )
+* Added ability to compare one field to another in Query::Equals
+* Added ObjectStore#get< domain_class >, which is the same as ObjectStore#getAll( domain_class )
+* ObjectStore can handle an ODBC connection string
+* Added LinkField#deleteCascade
+* When DomainObject is instantiated, it does a lazy evaluation of field values to save time when you load a table with many fields but you only care about a few
+* ObjectStore#getSubset uses Cache so query requests can be cached
+
 0.3.6 -- May 20 2004
 * WARNING: util/Logger replaced with the logger in log4r
 * TextField#valueForSQL handles three apostrophes at the start of a line. (Thanks to Mike Stok for the solution via comp.lang.ruby.)
