--- a/README
+++ b/README
@@ -6,6 +6,7 @@ REQUIREMENTS:
 * log4r ( http://log4r.sourceforge.net/ )
 * Ruby DBI ( http://ruby-dbi.sourceforge.net/ )
 * REXML ( http://www.germane-software.com/software/rexml/ ). If you're using Ruby 1.8 or later you already have REXML.
+* Extensions ( http://extensions.rubyforge.org/ )
 
 INSTALLATION:
 As root, run "./install.rb", which will copy the Ruby files into the right
