--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 CHANGELOG
 
+0.7.1 -- January 27 2005
+* LinkField sets the name to the underscored version of the domain class
+* ObjectStore#get_< plural domain class >( search_term ) knows to look up a link
+  in search_term with an underscored, not camel-case name
+* fixed a bug where Query#order_by wouldn't account for a field with a different 
+  db_field_name
+* one-line directives are underscore, not lower-case camel-case
+
 0.7.0 -- January 20 2005
 * fixed bug where requiring lafcadio would cause an empty test case to run
 * MockObjectStore raises an error if you try to commit a domain object with a
