--- a/README
+++ b/README
@@ -3,10 +3,11 @@ Lafcadio is an object-relational mapping layer for Ruby and MySQL.
 http://rubyforge.org/projects/lafcadio/
 
 REQUIREMENTS:
-* log4r ( http://log4r.sourceforge.net/ )
-* Ruby DBI ( http://ruby-dbi.sourceforge.net/ )
-* REXML ( http://www.germane-software.com/software/rexml/ ). If you're using Ruby 1.8 or later you already have REXML.
 * Extensions ( http://extensions.rubyforge.org/ )
+* QueueHash ( http://queuehash.rubyforge.org/ )
+* log4r ( http://log4r.sourceforge.net/ )
+* REXML ( http://www.germane-software.com/software/rexml/ ). If you're using Ruby 1.8 or later you already have REXML.
+* Ruby DBI ( http://ruby-dbi.sourceforge.net/ )
 
 INSTALLATION:
 As root, run "./install.rb", which will copy the Ruby files into the right
