--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 CHANGELOG
 
+0.9.2 -- February 12 2006
+* Added manual.
+
 0.9.1 -- December 23 2005
 * WARNING: Renamed ObjectField#not_null to #not_nil, MapObject#mappedTypes to
   #mapped_classes, ObjectStore#get_all to #all, ObjectStore#get_db_bridge to
