--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,16 @@
 CHANGELOG
 
+0.9.5 -- July 3 2006
+* WARNING: Moved LafcadioTestCase out of lib/lafcadio/test.rb, since it's not
+  that useful and was running the default test even if you just included the
+	file but were not trying to run a test.
+* Acceptance tests use a less-generic dbuser name.
+* Fixed bug in MockObjectStore transactions where committing a new row and then
+  querying for it returned nothing. Thanks to Brian Marick for reporting this.
+* Fixed bug in MockObjectStore where committing a dobj more than once in a
+  transaction caused retrieval errors later. Thanks to Brian Marick for
+	reporting this.
+	
 0.9.4 -- May 1 2006
 * Incorporated Brian Marick's logging patch: INSERTs, DELETEs and UPDATEs are also logged
 * Added RDoc auto-generation to the Gemspec
